Dynamic Fave icon

--- a/eval.ipynb
+++ b/eval.ipynb
@@ -36,10 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "###  THIS IS OLD AND OUT OF DATE!!!  IT NEEDS TO BE UPDATED WITH OUR INFO FROM /server/config/models.ts regarding\n",
+    "###  the models we are using from OpenAI!  \n",
+    "\n",
     "\"\"\"\n",
     "import openai\n",
     "\n",
@@ -97,11 +100,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#from the code of the \"LLMs as general pattern machines\" paper\n",
+    "\n",
+    "# CHECK that these colors match those officially defined by ARC\n",
+    "# Check D:\\1Projects\\arc-explainer\\client\\src\\constants\\colors.ts \n",
+    "\n",
     "colors = [(0, 0, 0),\n",
     "          (0, 116, 217),\n",
     "          (255, 65, 54),\n",
